--- a/news.html
+++ b/news.html
@@ -250,42 +250,17 @@
                                                                     <div id="sc_gallery-1" class='gallery galleryid-56 gallery-columns-3 gallery-size-thumbnail file'>
                                                                         <dl class="gallery-item">
                                                                             <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/funrel1.jpg"><img width="500" height="500" src="images/funrel1.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                    <a href="images/img1.jpg"><img width="500" height="500" src="images/img1.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
                                                                                 </dt>
                                                                         </dl>
                                                                         <dl class="gallery-item">
                                                                             <dt class='gallery-icon portrait'>
-                                                                                <a href="images/funrel2.jpg"><img width="500" height="500" src="images/funrel2.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                <a href="images/img2.jpg"><img width="500" height="500" src="images/img2.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
                                                                                 </dt>
                                                                         </dl>
                                                                         <dl class="gallery-item">
                                                                             <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/funrel3.jpg"><img width="500" height="500" src="images/funrel3.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <br style="clear: both">
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-
-                                                        <div class="wrap mcb-wrap one valign-top clearfix">
-                                                            <div class="mcb-wrap-inner">
-                                                                <div class="column mcb-column one column_image_gallery">
-                                                                    <div id="sc_gallery-1" class='gallery galleryid-56 gallery-columns-3 gallery-size-thumbnail file'>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/funrel4.jpg"><img width="500" height="500" src="images/funrel4.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                <a href="images/funrel5.jpg"><img width="500" height="500" src="images/funrel5.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
-                                                                                </dt>
-                                                                        </dl>
-                                                                        <dl class="gallery-item">
-                                                                            <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/funrel6.jpg"><img width="500" height="500" src="images/funrel6.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                    <a href="images/img3.jpg"><img width="500" height="500" src="images/img3.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
                                                                                 </dt>
                                                                         </dl>
                                                                         <br style="clear: both">
@@ -300,17 +275,17 @@
                                                                     <div id="sc_gallery-1" class='gallery galleryid-56 gallery-columns-3 gallery-size-thumbnail file'>
                                                                         <dl class="gallery-item">
                                                                             <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/funrel7.jpg"><img width="500" height="500" src="images/funrel7.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                    <a href="images/img4.jpg"><img width="500" height="500" src="images/img4.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
                                                                                 </dt>
                                                                         </dl>
                                                                         <dl class="gallery-item">
                                                                             <dt class='gallery-icon portrait'>
-                                                                                <a href="images/funrel8.jpg"><img width="500" height="500" src="images/funrel8.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                <a href="images/img5.jpg"><img width="500" height="500" src="images/img5.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
                                                                                 </dt>
                                                                         </dl>
                                                                         <dl class="gallery-item">
                                                                             <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/funrel9.jpg"><img width="500" height="500" src="images/funrel9.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                    <a href="images/img6.jpg"><img width="500" height="500" src="images/img6.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
                                                                                 </dt>
                                                                         </dl>
                                                                         <br style="clear: both">
@@ -325,17 +300,42 @@
                                                                     <div id="sc_gallery-1" class='gallery galleryid-56 gallery-columns-3 gallery-size-thumbnail file'>
                                                                         <dl class="gallery-item">
                                                                             <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/funrel10.jpg"><img width="500" height="500" src="images/funrel10.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                    <a href="images/img7.jpg"><img width="500" height="500" src="images/img7.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
                                                                                 </dt>
                                                                         </dl>
                                                                         <dl class="gallery-item">
                                                                             <dt class='gallery-icon portrait'>
-                                                                                <a href="images/funrel11.jpg"><img width="500" height="500" src="images/funrel11.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                <a href="images/img8.jpg"><img width="500" height="500" src="images/img8.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
                                                                                 </dt>
                                                                         </dl>
                                                                         <dl class="gallery-item">
                                                                             <dt class='gallery-icon portrait'>
-                                                                                    <a href="images/funrel12.jpg"><img width="500" height="500" src="images/funrel12.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                    <a href="images/img9.jpg"><img width="500" height="500" src="images/img9.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                </dt>
+                                                                        </dl>
+                                                                        <br style="clear: both">
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="wrap mcb-wrap one valign-top clearfix">
+                                                            <div class="mcb-wrap-inner">
+                                                                <div class="column mcb-column one column_image_gallery">
+                                                                    <div id="sc_gallery-1" class='gallery galleryid-56 gallery-columns-3 gallery-size-thumbnail file'>
+                                                                        <dl class="gallery-item">
+                                                                            <dt class='gallery-icon portrait'>
+                                                                                    <a href="images/img10.jpg"><img width="500" height="500" src="images/img10.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                </dt>
+                                                                        </dl>
+                                                                        <dl class="gallery-item">
+                                                                            <dt class='gallery-icon portrait'>
+                                                                                <a href="images/img11.jpg"><img width="500" height="500" src="images/img11.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                </dt>
+                                                                        </dl>
+                                                                        <dl class="gallery-item">
+                                                                            <dt class='gallery-icon portrait'>
+                                                                                    <a href="images/img12.jpg"><img width="500" height="500" src="images/img12.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
                                                                                 </dt>
                                                                         </dl>
                                                                         <br style="clear: both">
