--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
                                     <rs-layer id="slider-1-slide-1-layer-2" class="rev-btn" data-type="button" data-rsp_ch="on" data-xy="xo:230px,230px,188px,188px;yo:738px,738px,466px,466px;" data-text="w:normal;s:19,19,21,21;l:39,39,25,25;fw:500;" data-dim="minh:0px,0px,none,0px;" data-vbility="t,t,f,f"
                                         data-actions="o:click;a:scrollbelow;sp:1000ms;e:power1.inOut;" data-padding="t:3,3,4,4;r:35,35,23,23;b:5;l:35,35,23,23;" data-frame_999="o:0;st:w;" data-frame_hover="bgc:#fc6045;bor:0px,0px,0px,0px;bri:120%;" style="z-index:12;background-color:#454d53;font-family:Barlow Condensed;">
                                         MORE
-                                    </rs-layer><a id="slider-1-slide-1-layer-4" class="rs-layer rev-btn" href="/contact.html" target="_self" rel="noopener" data-type="button" data-rsp_ch="on" data-xy="xo:60px,60px,39px,39px;yo:738px,738px,516px,516px;"
+                                    </rs-layer>
+                                    
+                                    <a id="slider-1-slide-1-layer-4" class="rs-layer rev-btn" href="/contact.html" target="_self" rel="noopener" data-type="button" data-rsp_ch="on" data-xy="xo:60px,60px,39px,39px;yo:738px,738px,516px,516px;"
                                     data-text="w:normal;s:19,19,29,29;l:39,39,40,40;fw:500;" data-dim="minh:0px,0px,none,0px;" data-padding="t:3,3,8,8;r:35,35,37,37;b:5,5,10,10;l:35,35,37,37;" data-frame_0="x:0,0,0px,0px;y:0,0,0px,0px;" data-frame_1="x:0,0,0px,0px;y:0,0,0px,0px;"
                                     data-frame_999="o:0;st:w;" data-frame_hover="bgc:#454d53;bor:0px,0px,0px,0px;bri:120%;" style="z-index:11;background-color:#fc6045;font-family:Barlow Condensed;">CONTACT US </a><a id="slider-1-slide-1-layer-6" class="rs-layer prettyphoto rev-btn"
                                     href="https://youtu.be/9d4yhuYj7rg" target="_self" data-type="button" data-rsp_ch="on" data-xy="xo:537px,537px,354px,354px;yo:690px,690px,432px,432px;" data-text="w:normal;s:30,30,19,19;l:30,30,19,19;fw:500;a:center;"
