--- a/news.html
+++ b/news.html
@@ -129,6 +129,69 @@
                                                         >EVENTS</span> <br><br><br>
 
                                                         <div class="column_attr clearfix align_center">
+                                                            <h2>Strengthening Ties Through Safety: <span class="themecolor"> <br>Korea's Fire Kit Donation to Sri Lanka.</span></h2>
+                                                               <p>In a heartwarming display of international collaboration, the Korean Government, sponsored by the Life Culture Movement Foundation under the guidance of Mr. Kim Hong Seng, 
+                                                                has generously donated fire kits to the Sri Lankan Fire Service Department. This effort was meticulously coordinated by Mr. Ravindra Gayanath, whose dedication facilitated the 
+                                                                smooth exchange between the two countries.
+                                                                <br>
+                                                                At the official handover ceremony, the fire kits were graciously received by Municipal Commissioner Mrs. J.M. Bhadranie Jayawardhana, 
+                                                                alongside esteemed officials, including Mr. Lolithya Nadishan. This partnership not only enhances Sri Lanka’s firefighting capabilities but also strengthens 
+                                                                the enduring ties of friendship and cooperation between Korea and Sri Lanka, emphasizing a shared commitment to public safety and resilience.</p>
+                                                        </div>
+
+                                                        <div class="wrap mcb-wrap one valign-top clearfix">
+                                                            <div class="mcb-wrap-inner">
+                                                                <div class="column mcb-column one column_image_gallery">
+                                                                    <div id="sc_gallery-1" class='gallery galleryid-56 gallery-columns-3 gallery-size-thumbnail file'>
+                                                                        <dl class="gallery-item">
+                                                                            <dt class='gallery-icon portrait'>
+                                                                                    <a href="images/korean2.jpg"><img width="500" height="500" src="images/korean2.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                </dt>
+                                                                        </dl>
+                                                                        <dl class="gallery-item">
+                                                                            <dt class='gallery-icon portrait'>
+                                                                                <a href="images/korean3.jpg"><img width="500" height="500" src="images/korean3.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                </dt>
+                                                                        </dl>
+                                                                        <dl class="gallery-item">
+                                                                            <dt class='gallery-icon portrait'>
+                                                                                    <a href="images/korean4.jpg"><img width="500" height="500" src="images/korean4.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                </dt>
+                                                                        </dl>
+                                                                        <br style="clear: both">
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="wrap mcb-wrap one valign-top clearfix">
+                                                            <div class="mcb-wrap-inner">
+                                                                <div class="column mcb-column one column_image_gallery">
+                                                                    <div id="sc_gallery-1" class='gallery galleryid-56 gallery-columns-3 gallery-size-thumbnail file'>
+                                                                        <dl class="gallery-item">
+                                                                            <dt class='gallery-icon portrait'>
+                                                                                    <a href="images/korean5.jpg"><img width="500" height="500" src="images/korean5.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                </dt>
+                                                                        </dl>
+                                                                        <dl class="gallery-item">
+                                                                            <dt class='gallery-icon portrait'>
+                                                                                <a href="images/korean7.jpg"><img width="500" height="500" src="images/korean7.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                </dt>
+                                                                        </dl>
+                                                                        <dl class="gallery-item">
+                                                                            <dt class='gallery-icon portrait'>
+                                                                                    <a href="images/korean1.jpg"><img width="500" height="500" src="images/korean1.jpg" class="attachment-thumbnail size-thumbnail" alt></a>
+                                                                                </dt>
+                                                                        </dl>
+                                                                        <br style="clear: both">
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+                                                        
+
+                                                        <div class="column_attr clearfix align_center">
                                                             <h2>2024 International Fire Fighters Day<span class="themecolor"> <br>Events</span></h2>
                                                                <p>On May 4, 2024, the Colombo Fire Service Department and the Colombo Lotus Tower conducted a successful joint fire drill in honor of International Fire Fighters Day.
                                                                 It highlights the significance of emergency preparedness initiatives undertaken by 
