--- a/result.html
+++ b/result.html
@@ -123,10 +123,10 @@
                                         data-frame_0="x:0,0,0px,0px;y:0,0,0px,0px;"
                                         data-frame_1="x:0,0,0px,0px;y:0,0,0px,0px;" data-frame_999="o:0;st:w;"
                                         style="z-index:9;font-family:Barlow Condensed;">
-                                        NIGHT AND DAY
-                                        <br> WE ARE <span class="themecolor">ALWAYS
+                                        WELCOME 
+                                        <br> TO THE  <span class="themecolor">RESULT
                                             <br>
-                                            FIREMEN</span>
+                                            PAGE</span>
                                     </rs-layer>
                                     <rs-layer id="slider-1-slide-1-layer-2" class="rev-btn" data-type="button"
                                         data-rsp_ch="on"
