overall result update

--- a/result.html
+++ b/result.html
@@ -259,7 +259,8 @@
                                         <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 80.6<br>
-                                            Theory Test - 87.5
+                                            Theory Test - 87.5<br>
+                                            <b>Overall Score = 84.05</b> 
                                         </p>
                                     </div>
                                 </div>
@@ -277,7 +278,8 @@
                                         <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 77.4<br>
-                                            Theory Test - 58
+                                            Theory Test - 58<br>
+                                            <b>Overall Score = 67.7</b> 
                                         </p>
                                     </div>
                                 </div>
@@ -295,7 +297,8 @@
                                         <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 82.6<br>
-                                            Theory Test - N/A
+                                            Theory Test - 52<br>
+                                            <b>Overall Score = 67.3</b> 
                                         </p>
                                     </div>
                                 </div>
@@ -313,7 +316,8 @@
                                         <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 80.8<br>
-                                            Theory Test - N/A
+                                            Theory Test - 58<br>
+                                            <b>Overall Score = 69.4</b> 
                                         </p>
                                     </div>
                                 </div>
@@ -331,7 +335,8 @@
                                         <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 75.8<br>
-                                            Theory Test - 41
+                                            Theory Test - 41<br>
+                                            <b>Overall Score = 58.4</b> 
                                         </p>
                                     </div>
                                 </div>
@@ -349,7 +354,8 @@
                                         <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 75.4<br>
-                                            Theory Test - 72
+                                            Theory Test - 72<br>
+                                            <b>Overall Score = 73.7</b> 
                                         </p>
                                     </div>
                                 </div>
@@ -367,7 +373,8 @@
                                         <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 78.8<br>
-                                            Theory Test - 57
+                                            Theory Test - 57<br>
+                                            <b>Overall Score = 67.9</b> 
                                         </p>
                                     </div>
                                 </div>
@@ -385,7 +392,8 @@
                                         <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 80.6<br>
-                                            Theory Test - 48
+                                            Theory Test - 48<br>
+                                            <b>Overall Score = 64.3</b> 
                                         </p>
                                     </div>
                                 </div>
@@ -403,7 +411,8 @@
                                         <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 76.8<br>
-                                            Theory Test - 45.5
+                                            Theory Test - 45.5<br>
+                                            <b>Overall Score = 61.15</b> 
                                         </p>
                                     </div>
                                 </div>
@@ -421,7 +430,8 @@
                                         <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 79<br>
-                                            Theory Test - N/A
+                                            Theory Test - 54<br>
+                                            <b>Overall Score = 66.5</b> 
                                         </p>
                                     </div>
                                 </div>
@@ -439,7 +449,8 @@
                                         <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 84.2<br>
-                                            Theory Test - 79
+                                            Theory Test - 79<br>
+                                            <b>Overall Score = 81.6</b> 
                                         </p>
                                     </div>
                                 </div>
@@ -457,7 +468,8 @@
                                         <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 82<br>
-                                            Theory Test - 63
+                                            Theory Test - 63<br>
+                                            <b>Overall Score = 72.5</b> 
                                         </p>
                                     </div>
                                 </div>
@@ -475,7 +487,8 @@
                                         <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 74<br>
-                                            Theory Test - 89
+                                            Theory Test - 89<br>
+                                            <b>Overall Score = 81.5</b> 
                                         </p>
                                     </div>
                                 </div>
@@ -493,7 +506,8 @@
                                         <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 80<br>
-                                            Theory Test - 59
+                                            Theory Test - 59<br>
+                                            <b>Overall Score = 69.5</b> 
                                         </p>
                                     </div>
                                 </div>
@@ -511,7 +525,8 @@
                                         <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 74.6<br>
-                                            Theory Test - 49
+                                            Theory Test - 49<br>
+                                            <b>Overall Score = 61.8</b> 
                                         </p>
                                     </div>
                                 </div>
@@ -529,7 +544,8 @@
                                         <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 76.6<br>
-                                            Theory Test - 49
+                                            Theory Test - 49<br>
+                                            <b>Overall Score = 64.3</b> 
                                         </p>
                                     </div>
                                 </div>
