--- a/result.html
+++ b/result.html
@@ -256,7 +256,7 @@
                                 </div>
                                 <div class="answer">
                                     <div style="display: flex; align-items: center; gap: 10px;">
-                                        <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
+                                        <img src="images/std1.png" alt="Student Photo" width="150" height="150">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 80.6<br>
                                             Theory Test - 87.5<br>
@@ -275,7 +275,7 @@
                                 </div>
                                 <div class="answer">
                                     <div style="display: flex; align-items: center; gap: 10px;">
-                                        <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
+                                        <img src="images/std2.png" alt="Student Photo" width="150" height="150">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 77.4<br>
                                             Theory Test - 58<br>
@@ -294,7 +294,7 @@
                                 </div>
                                 <div class="answer">
                                     <div style="display: flex; align-items: center; gap: 10px;">
-                                        <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
+                                        <img src="images/std3.png" alt="Student Photo" width="150" height="150">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 82.6<br>
                                             Theory Test - 52<br>
@@ -313,7 +313,7 @@
                                 </div>
                                 <div class="answer">
                                     <div style="display: flex; align-items: center; gap: 10px;">
-                                        <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
+                                        <img src="images/std4.png" alt="Student Photo" width="150" height="150">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 80.8<br>
                                             Theory Test - 58<br>
@@ -332,7 +332,7 @@
                                 </div>
                                 <div class="answer">
                                     <div style="display: flex; align-items: center; gap: 10px;">
-                                        <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
+                                        <img src="images/std5.png" alt="Student Photo" width="150" height="150">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 75.8<br>
                                             Theory Test - 41<br>
@@ -351,7 +351,7 @@
                                 </div>
                                 <div class="answer">
                                     <div style="display: flex; align-items: center; gap: 10px;">
-                                        <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
+                                        <img src="images/std6.png" alt="Student Photo" width="150" height="150">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 75.4<br>
                                             Theory Test - 72<br>
@@ -370,7 +370,7 @@
                                 </div>
                                 <div class="answer">
                                     <div style="display: flex; align-items: center; gap: 10px;">
-                                        <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
+                                        <img src="images/std7.png" alt="Student Photo" width="150" height="150">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 78.8<br>
                                             Theory Test - 57<br>
@@ -389,7 +389,7 @@
                                 </div>
                                 <div class="answer">
                                     <div style="display: flex; align-items: center; gap: 10px;">
-                                        <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
+                                        <img src="images/std8.png" alt="Student Photo" width="150" height="150">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 80.6<br>
                                             Theory Test - 48<br>
@@ -408,7 +408,7 @@
                                 </div>
                                 <div class="answer">
                                     <div style="display: flex; align-items: center; gap: 10px;">
-                                        <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
+                                        <img src="images/std9.png" alt="Student Photo" width="150" height="150">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 76.8<br>
                                             Theory Test - 45.5<br>
@@ -427,7 +427,7 @@
                                 </div>
                                 <div class="answer">
                                     <div style="display: flex; align-items: center; gap: 10px;">
-                                        <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
+                                        <img src="images/std10.png" alt="Student Photo" width="150" height="150">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 79<br>
                                             Theory Test - 54<br>
@@ -446,7 +446,7 @@
                                 </div>
                                 <div class="answer">
                                     <div style="display: flex; align-items: center; gap: 10px;">
-                                        <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
+                                        <img src="images/std11.png" alt="Student Photo" width="150" height="150">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 84.2<br>
                                             Theory Test - 79<br>
@@ -465,7 +465,7 @@
                                 </div>
                                 <div class="answer">
                                     <div style="display: flex; align-items: center; gap: 10px;">
-                                        <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
+                                        <img src="images/std12.png" alt="Student Photo" width="150" height="150">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 82<br>
                                             Theory Test - 63<br>
@@ -484,7 +484,7 @@
                                 </div>
                                 <div class="answer">
                                     <div style="display: flex; align-items: center; gap: 10px;">
-                                        <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
+                                        <img src="images/std13.png" alt="Student Photo" width="150" height="150">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 74<br>
                                             Theory Test - 89<br>
@@ -503,7 +503,7 @@
                                 </div>
                                 <div class="answer">
                                     <div style="display: flex; align-items: center; gap: 10px;">
-                                        <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
+                                        <img src="images/std14.png" alt="Student Photo" width="150" height="150">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 80<br>
                                             Theory Test - 59<br>
@@ -522,7 +522,7 @@
                                 </div>
                                 <div class="answer">
                                     <div style="display: flex; align-items: center; gap: 10px;">
-                                        <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
+                                        <img src="images/std15.png" alt="Student Photo" width="150" height="150">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 74.6<br>
                                             Theory Test - 49<br>
@@ -541,7 +541,7 @@
                                 </div>
                                 <div class="answer">
                                     <div style="display: flex; align-items: center; gap: 10px;">
-                                        <img src="images/man.png" alt="Student Photo" width="100" height="100" style="border-radius: 50%;">
+                                        <img src="images/std16.png" alt="Student Photo" width="150" height="150">
                                         <p style="margin: 0;"><b>Student Result</b><br>
                                             Practical Test - 76.6<br>
                                             Theory Test - 49<br>
