--- a/index.html
+++ b/index.html
@@ -321,6 +321,33 @@
                             </div>
                         </div>
 
+                        <div class="section mcb-section" style="padding-top:40px; padding-bottom:40px">
+                            <div class="section-decoration top" style="background-image:url(content/app3/images/be_app3_decor_top_bg.png);height:217px"></div>
+                            <div class="section_wrapper mcb-section-inner">
+                                <div class="wrap mcb-wrap one valign-top clearfix">
+                                    <div class="mcb-wrap-inner">
+                                        <div class="column mcb-column one column_image">
+                                            <div class="image_frame image_item no_link scale-with-grid aligncenter no_border">
+                                                <div class="image_wrapper">
+                                                    <img class="scale-with-grid" src="images/verify.png" style="width: 200px; height: auto;">
+                                                </div>                                                
+                                            </div>
+                                        </div>
+                                        <div class="column mcb-column one column_column">
+                                            <div class="column_attr clearfix align_center">
+                                                <hr class="no_line" style="margin:0 auto 10px">
+                                                <h2>Fire and Rescue Training Program<br>Results Verification</h2>
+                                                <hr class="no_line" style="margin:0 auto 10px">
+                                            </div>
+                                        </div>
+                                        <div class="column mcb-column one column_button">
+                                            <div class="button_align align_center">
+                                                <a class="button button_size_3 button_stroke_custom button_js" href="result.html" style="border-color:#9790c7 !important; color:#000000"><span class="button_label">Verify Results</span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
                         
                        
